# tauri-ntex

./: .gitignore  LICENSE  README.md  james.md  package.json
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: ntex-server.toml
src-tauri/src/: main.rs
